# fantastic-octo-umbrella

./: .envrc  Cargo.toml  build.rs
migrations/: 20231223203801_create_stories.sql  20231223204705_create_tasks.sql
proto/todos/v1/: todos.proto
scripts/: create-migration.sh
scripts/v1/: grpcurl-complete-task.sh  grpcurl-create-story.sh  grpcurl-create-task.sh  grpcurl-delete-story.sh  grpcurl-delete-task.sh  grpcurl-get-stories.sh  grpcurl-get-tasks.sh
src/: config.rs  health.rs  lib.rs  main.rs  validate.rs
src/v1/: api.rs  entity.rs  mod.rs  repo.rs  service.rs
